--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,13 @@ attrs==25.1.0
 boto3==1.36.11
 botocore==1.36.11
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 colorama==0.4.6
+cryptography==44.0.2
 dataclasses-json==0.6.7
 Django==5.1.5
+django-allauth==65.4.1
 django-storages==1.14.4
 exceptiongroup==1.2.2
 filelock==3.17.0
@@ -51,9 +54,11 @@ pandas==2.2.3
 pillow==11.1.0
 propcache==0.3.0
 psycopg2==2.9.10
+pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.8.0
 pydantic_core==2.27.2
+PyJWT==2.10.1
 pyodbc==5.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -67,6 +72,7 @@ safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
 sentence-transformers==3.4.1
+setuptools==76.0.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
